--- a/countrypicker/src/main/res/values-iw/strings.xml
+++ b/countrypicker/src/main/res/values-iw/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="clear_text">טקסט ברור</string>
     <string name="country">מדינה</string>
+    <string name="search">לְחַפֵּשׂ</string>
 </resources>
