--- a/countrypicker/src/main/res/values-zh/strings.xml
+++ b/countrypicker/src/main/res/values-zh/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="country">Pays</string>
+    <string name="clear_text">清除文本</string>
+    <string name="country">国家</string>
+    <string name="search">搜索</string>
 </resources>
