--- a/countrypicker/src/main/res/values/strings.xml
+++ b/countrypicker/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
+    <string name="clear_text">Clear text</string>
     <string name="country">Country</string>
+    <string name="search">Search</string>
 </resources>
