--- a/countrypicker/src/main/res/values-it/strings.xml
+++ b/countrypicker/src/main/res/values-it/strings.xml
@@ -1,3 +1,5 @@
 <resources>
+    <string name="clear_text">Cancella testo</string>
     <string name="country">Paese</string>
+    <string name="search">Ricerca</string>
 </resources>
