--- a/countrypicker/src/main/res/values-sv/strings.xml
+++ b/countrypicker/src/main/res/values-sv/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="clear_text">Tydlig text</string>
     <string name="country">Land</string>
+    <string name="search">Söka</string>
 </resources>
